--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -4,4 +4,5 @@ source "https://rubygems.org"
 gem "jekyll", ">= 3.5", "< 5.0"
 gem "kramdown-parser-gfm" if ENV["JEKYLL_VERSION"] == "~> 3.9"
 gem "jekyll-seo-tag", "~> 2.1"
+gem "rouge"
 
